Fixed project section alignment for mobile view

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2261,7 +2261,7 @@
 		@media screen and (max-width: 736px) {
 
 			.features section {
-				padding: 2.5em 1.5em 0.1em 5.5em ;
+				padding: 2.5em 1.5em 0.1em 1.5em ;
 			}
 
 				.features section .icon {
